Changelog-Line too long

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 shinken (2.4.2-1+PIC001) unstable; urgency=medium
 
-  * New upstream version (from https://github.com/naparuba/shinken.git [upstream_source/master])
+  * New upstream version
+    (from https://github.com/naparuba/shinken.git [upstream_source/master])
 
  -- Stefan Taute (PLANET IC GmbH) <taute@planet-ic.de>  Tue, 27 Oct 2015 10:45:33 +0100
 
